# serenity_discord_bot

./: .gitignore  Cargo.toml
.github/workflow/: actions.yml
.github/workflows/: main.yml
src/: config.rs  main.rs  settings.rs
src/api/: bot.rs  mod.rs
src/api/schema/: circle.rs  coper.rs  member.rs  mod.rs  response.rs
src/commands/: admin.rs  circle.rs  mod.rs  ping.rs  report.rs
src/managers/: circle.rs  firestore.rs  mod.rs  mongo.rs  report.rs
src/util/: mod.rs  response.rs
