[package]
name = "serenity_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
firestore = "0.27.0"
mongodb = "2.3.1"
regex = "1.7.1"
serde = {version="1.0.152", features=["derive"]}
serde_derive = "1.0.152"
serde_json = "1.0.93"
serenity = {version="0.11.5",  default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = {version="1.25.0", features=["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
